--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "heyupdate/emoji",
+    "name": "arkadeno/emoji",
     "description": "Convert unicode and named (i.e. :smile:) Emoji into images",
     "keywords": ["emoji"],
     "type": "library",
